[project]
name = "paw-lu-github-io"
version = "0.1.0"
description = "Source for generating GitHub user page"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pelican-render-math>=1.0.5",
    "pelican-tailwindcss>=0.4.0",
    "pelican[markdown]>=4.11.0.post0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "ty>=0.0.1a26",
]


[tool.ruff.lint]
ignore = ["COM812", "FIX002", "TD003"]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    "DOC",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "ICN",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
]
exclude = ["tasks.py"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.rules]
division-by-zero = "warn"
possibly-unresolved-reference = "warn"
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.src]
exclude = ["tasks.py"]
